--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -8,7 +8,7 @@ $font: 'Poppins';
 $secondary: hsl(0, 0%, 0%); 
 $primary: #ff97af;
 $light: #fff; 
-$hover: #af75fa;
+$contrast: #af75fa;
 
 $default: 2em;
 
