adding target blank attr to links pointing to external sites

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -5,7 +5,7 @@
     <h3>About<span class="primary">.</span></h3>
     
     <p>
-      Hello! I'm Patricia and I love creating different projects with code. When I am not working on a website or a web app, I like to create <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw">YouTube tutorials</a> for others, who learn frontend web development. 
+      Hello! I'm Patricia and I love creating different projects with code. When I am not working on a website or a web app, I like to create <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">YouTube tutorials</a> for others, who learn frontend web development. 
     </p>
 
     <p>Some of my videos are:</p>
@@ -22,15 +22,15 @@
               <p class="grid__desc"><%= video.description %></p>
             </div>
             <div>
-              <a href=<%= video.demo_url %> class="button">View Demo</a>
-              <a href=<%= video.code_url %> class="button">Source Code</a>
+              <a href=<%= video.demo_url %> target="_blank" class="button">View Demo</a>
+              <a href=<%= video.code_url %> target="_blank" class="button">Source Code</a>
             </div>
           </div>
         </div>
       <% }); %>
     </div>
     <p>
-      View more on YouTube: <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw">Visit my channel</a>.
+      View more on YouTube: <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">Visit my channel</a>.
     </p>
     
     
