--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -29,8 +29,8 @@
               </p>
             </div>
             <div>
-              <a href=<%= project.live_url %> class="button">View Web App</a>
-              <a href=<%= project.github_url %> class="button">Source Code</a>
+              <a href=<%= project.live_url %> target="_blank" class="button">View Web App</a>
+              <a href=<%= project.github_url %> target="_blank" class="button">Source Code</a>
             </div>
           </div>
         </div>
