--- a/views/partials/socials.ejs
+++ b/views/partials/socials.ejs
@@ -1,13 +1,13 @@
 <div class="social-media">
   <p>Find me on social media:</p>
-  <a href="https://github.com/patriciamolnar"><svg>
+  <a href="https://github.com/patriciamolnar" target="_blank"><svg>
     <use href="#github"></use></svg></a>
-  <a href="https://www.linkedin.com/in/patricia-molnar-a469471b3/">
+  <a href="https://www.linkedin.com/in/patricia-molnar-a469471b3/" target="_blank">
     <svg><use href="#linkedin"></use></svg></a>
-  <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw">
+  <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">
     <svg><use href="#youtube"></use></svg></a>
-  <a href="https://twitter.com/pmcoding">
+  <a href="https://twitter.com/pmcoding" target="_blank">
     <svg><use href="#twitter"></use></svg></a>
-  <a href="https://codepen.io/patriciamolnar/">
+  <a href="https://codepen.io/patriciamolnar/" target="_blank">
     <img src="https://blog.codepen.io/wp-content/uploads/2012/06/Button-Fill-Black-Large.png" width="24" height="24" alt=""></a>
 </div>
