fixing hover for social media svgs

--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -148,6 +148,15 @@ a {
         border-radius: 50%; 
       }
     }
+
+    &:focus:not(:focus-visible) {
+      border-bottom: none; 
+
+      svg {
+        fill: $primary; 
+        box-shadow: none;  
+      }
+    }
   } 
 }
 
