--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,8 +1,8 @@
 <section id="contact">
   <h3>Contact<span class="primary">.</span></h3>
-  <p>Thank you for checking out my portfolio! I am currently looking for an <span class="underline bold">entry-level web developer position</span>.</p>
+  <p>Thank you for checking out my portfolio! I am currently looking for an <span class="diff bold">entry-level web developer position</span>.</p>
   <p>
-    If you have a job opening and you think I could be suitable, please call me on <span class="underline bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
+    If you have a job opening and you think I could be suitable, please call me on <span class="diff bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
   </p>
   <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
   <a href="#contact" id="contact-button">
