adding responsiveness for screen sizes 1400px+

--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -188,3 +188,22 @@ a {
     @include pad(2em, 6em, 2em, 6em);
   }
 }
+
+@media screen and (min-width: 90em) {
+  body { 
+    line-height: 2; 
+  }
+  section {
+    @include pad(3em, 10em, 3em, 10em);
+  }
+}
+
+@media screen and (min-width: 120em) {
+  body {
+    font-size: 1.8rem;
+  }
+
+  section {
+    @include pad(5em, 15em, 4em, 15em);
+  }
+}
