--- a/public/css/_certificates.scss
+++ b/public/css/_certificates.scss
@@ -50,3 +50,17 @@
     font-size: 0.9em; 
   }
 }
+
+
+@media screen and (min-width: 90em) {
+  #certificates {
+    margin-top: -5em;
+    padding-bottom: 6em;
+  }
+}
+
+@media screen and (min-width: 120em) {
+  #certificates {
+    margin-top: -8em;
+  }
+}
