--- a/public/css/_contact.scss
+++ b/public/css/_contact.scss
@@ -74,3 +74,15 @@
     padding-top: 4em;
   }
 }
+
+@media screen and (min-width: 90em) {
+  #contact {
+    padding-top: 8em;
+  }
+}
+
+@media screen and (min-width: 120em) {
+  #contact {
+    padding-top: 12em;
+  }
+}
