--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -166,7 +166,7 @@
       }
     }
 
-    .skills {
+    .hero__skills {
       margin: 0;
       color: lighten($secondary, 90%);
     }
@@ -306,5 +306,29 @@
 
   #divider-3 {
     margin: -5em 0 -1.5em; 
+  }
+}
+
+@media screen and (min-width: 90em) {
+  .hero {
+    &__background {
+      margin-top: -7rem;
+    }
+  }
+
+  #divider-3 {
+    margin: -7em 0 -2em; 
+  }
+}
+
+@media screen and (min-width: 120em) {
+  .hero {
+    &__background {
+      margin-top: -8rem;
+    }
+  }
+
+  #divider-3 {
+    margin: -8em 0 -2.5em; 
   }
 }
