--- a/public/css/_mixins.scss
+++ b/public/css/_mixins.scss
@@ -12,6 +12,16 @@
   @media (min-width: 50em) {
     margin-bottom: -1.5em;
   }
+
+  @media (min-width: 90em) {
+    margin-top: -0.5em;
+    margin-bottom: -2em;
+  }
+
+  @media (min-width: 120em) {
+    // margin-top: -1em; 
+    margin-bottom: -2.5em;
+  }
 }
 
 @mixin bg($url, $p: center) {
