--- a/public/css/_portfolio.scss
+++ b/public/css/_portfolio.scss
@@ -84,3 +84,19 @@
     }
   }
 }
+
+@media screen and (min-width: 90em) {
+  .portfolio {
+    .grid {
+      gap: 3em; 
+    }
+  }
+}
+
+@media screen and (min-width: 120em) {
+  .portfolio {
+    .grid {
+      gap: 4em; 
+    }
+  }
+}
