--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
               <span>Web</span><span>Developer</span><span>.</span>
             </p>
           </div>
-          <p class="skills transition">HTML5, CSS3, JavaScript, React, Node, Express, PHP, MongoDB, mySQL</p>
+          <p class="hero__skills transition">HTML5, CSS3, JavaScript, React, Node, Express, PHP, MongoDB, mySQL</p>
           <a href="#portfolio">View Portfolio</a>
         </div>
         <svg id="divider-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
