--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -11,12 +11,11 @@ footer {
   
   .footer__bg {
     background-color: $secondary;
-    @include bg('https://images.pexels.com/photos/1182338/pexels-photo-1182338.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940', top left);
+    @include bg('../img/flowers.jpg', top left);
   
     position: absolute; 
     inset: 0; 
     z-index: -1;
-    opacity: 0.4;
   }
 
   .contact-details {
