--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -108,7 +108,7 @@
     position: absolute; 
     inset: 0;
     background-color: $secondary; 
-    @include bg('https://images.pexels.com/photos/1083822/pexels-photo-1083822.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    @include bg('../img/flowers.jpg');
     z-index: -1; 
   }
 
