--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -5,7 +5,7 @@
       <% data.portfolio.forEach(project => { %>
         <div class="grid__card">
           <div class="grid__video">
-            <iframe width="100%" height="100%" src=<%= project.video_url %> title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" loading="lazy" src=<%= project.video_url %> title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
   
           <div class="grid__copy">
