--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <header id="header">
   <div class="header__flex">
-    <div id="burger">
+    <button id="burger">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
-    </div>
+    </button>
     <h1 class="heading">PM<span class="primary">.</span></h1>
   </div>
   <nav id="nav">
