--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,9 @@
+
 <footer>
   <div class="footer__bg"></div>
+  <div>
+    <a href="#nav"><svg><use href="#backtotop"></use></svg></a>
+  </div>
   <p>&copy; <span id="current-year"></span>Portfolio page of Patricia Molnar - Full Stack Web Developer</p>
   <div class="contact-details">
     <span>
@@ -56,6 +60,12 @@
 <symbol id="phone">
     <path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/>
 </symbol>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  <symbol id="backtotop">
+    <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.58l5.995 5.988-1.416 1.414-4.579-4.574-4.59 4.574-1.416-1.414 6.006-5.988z"/>
+  </symbol>
 </svg>
 
 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
