--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -20,7 +20,7 @@
   .bar1, .bar2, .bar3 {
     width: 2.5rem;
     height: 0.2rem;
-    background-color: lighten($secondary, 100%);
+    background-color: $light;
     margin: 0.6rem 0;
     transition: 0.3s;
     pointer-events: none;
@@ -284,7 +284,7 @@
   
     a {
       display: inline-block;
-      color: lighten($secondary, 100%);
+      color: $light;
       font-weight: 600;
       font-size: calc(1rem + 1vw);
       padding: 0.5em;
