--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -5,7 +5,7 @@ $experiment: 'Unica One';
 
 $font: 'Poppins';
 
-$secondary: hsl(0, 0%, 0%); 
+$secondary: #000; 
 $primary: #ff97af;
 $light: #fff; 
 $contrast: #af75fa;
