--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,3 +4,4 @@
 <title>Patricia Molnar's Portfolio</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/png" href="favicon.png">
