combining font imports into one, changing var name from $experiment to $font2

--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -160,7 +160,7 @@
         margin: 0;
         
         span:nth-of-type(1) {
-          font-family: $experiment; 
+          font-family: $font2; 
           text-transform: capitalize;
           font-size: calc(1rem + 10vw);
           color: $primary;
