--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Unica+One&display=swap');
-
-$experiment: 'Unica One';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&family=Unica+One&display=swap');
 
 $font: 'Poppins';
+$font2: 'Unica One';
 
 $secondary: #000; 
 $primary: #ff97af;
