--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -17,6 +17,11 @@
     @include fcs(); 
   }
 
+  &:focus:not(:focus-visible) {
+    outline: none; 
+    background-color: transparent; 
+  }
+
   .bar1, .bar2, .bar3 {
     width: 2.5rem;
     height: 0.2rem;
