--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -113,6 +113,7 @@
   height: 100vh;
   position: relative;
   line-height: 1.2;
+  // margin-bottom: -1em; 
 
   &__background {
     margin-top: -5rem;
@@ -133,12 +134,9 @@
     }
 
     #divider-1 {
-      margin-bottom: -2rem; 
+      margin-bottom: -0.5rem; 
     }
 
-    #divider-2 {
-      margin-top: -0.5rem;
-    }
   }
 
   &__text {
@@ -197,20 +195,23 @@
       }
     }
   }
-}
 
-#divider-3 {
-  fill: lighten($secondary, 6%);
-  margin: -2em 0 -0.8rem; 
+  #divider-3 {
+    fill: lighten($secondary, 6%);
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    width: 100%; 
+  }
 }
 
 @media screen and (min-width: 35em) {
   .hero {
     padding-bottom: 1em;
-  }
 
-  #divider-3 {
-    margin: -3em 0 -1em; 
+    #divider-3 {
+      margin-bottom: -2rem;
+    }
   }
 }
 
@@ -245,10 +246,6 @@
         }
       }
     }
-  }
-
-  #divider-3 {
-    margin: -4em 0 -1em; 
   }
 }
 
@@ -314,10 +311,6 @@
       }
     }
   }
-
-  #divider-3 {
-    margin: -5em 0 -1.5em; 
-  }
 }
 
 @media screen and (min-width: 90em) {
@@ -325,10 +318,6 @@
     &__background {
       margin-top: -7rem;
     }
-  }
-
-  #divider-3 {
-    margin: -7em 0 -2em; 
   }
 }
 
@@ -338,8 +327,12 @@
       margin-top: -8rem;
     }
   }
+}
 
-  #divider-3 {
-    margin: -8em 0 -2.5em; 
+@media screen and (min-width: 180em) {
+  .hero {
+    #divider-3 {
+      margin-bottom: -4rem;
+    }
   }
 }
