fixing position of svg dividers

--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -1,5 +1,5 @@
 <% if(data.portfolio) { %>
-  <section id="portfolio" class="portfolio">
+  <section id="portfolio" class="portfolio section--padding">
     <h3 class="heading">Portfolio<span class="primary">.</span></h3>
     <div class="grid">
       <% data.portfolio.forEach(project => { %>
