--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -7,6 +7,7 @@ body {
   line-height: 1.6; 
   font-family: $font;
   background-color: $secondary; 
+  // background-color: white;
   color: $light; 
 }
 
@@ -31,7 +32,7 @@ h4 {
   font-size: 2rem;
 }
 
-section {
+.section--padding {
   @include pad();
 }
 
@@ -163,11 +164,19 @@ a {
 //Page Dividers
 .divider {
   &.light {
-    @include divider(lighten($secondary, 6%));
+    fill: lighten($secondary, 6%);
   }
 
   &.dark {
-    @include divider($secondary);
+    fill: $secondary;
+  }
+
+  &.top {
+    margin-top: -0.5em;
+  }
+
+  &.bottom {
+    margin-bottom: -0.5em; 
   }
 }
 
@@ -183,9 +192,35 @@ a {
   }
 }
 
+@media screen and (min-width: 40em) {
+  .section--padding {
+    @include pad(2em, 4em, 2em, 4em);
+  }
+
+  .divider {
+    &.top {
+      margin-top: -1em;
+    }
+  
+    &.bottom {
+      margin-bottom: -1em; 
+    }
+  }
+}
+
 @media screen and (min-width: 64em) {
-  section {
+  .section--padding {
     @include pad(2em, 6em, 2em, 6em);
+  }
+
+  .divider {
+    &.top {
+      margin-top: -1.5em;
+    }
+  
+    &.bottom {
+      margin-bottom: -1.5em; 
+    }
   }
 }
 
@@ -193,8 +228,18 @@ a {
   body { 
     line-height: 2; 
   }
-  section {
+  .section--padding {
     @include pad(3em, 10em, 3em, 10em);
+  }
+
+  .divider {
+    &.top {
+      margin-top: -2em;
+    }
+  
+    &.bottom {
+      margin-bottom: -2em; 
+    }
   }
 }
 
@@ -203,7 +248,17 @@ a {
     font-size: 1.8rem;
   }
 
-  section {
+  .section--padding {
     @include pad(5em, 15em, 4em, 15em);
+  }
+
+  .divider {
+    &.top {
+      margin-top: -3em;
+    }
+  
+    &.bottom {
+      margin-bottom: -3em; 
+    }
   }
 }
