--- a/public/css/_contact.scss
+++ b/public/css/_contact.scss
@@ -66,20 +66,11 @@
   } 
 }
 
+
 @media screen and (min-width: 50em) {
   #contact {
-    padding-top: 4em;
-  }
-}
-
-@media screen and (min-width: 90em) {
-  #contact {
-    padding-top: 8em;
-  }
-}
-
-@media screen and (min-width: 120em) {
-  #contact {
-    padding-top: 12em;
+    .section--padding {
+      padding-top: 8em;
+    }
   }
 }
