--- a/views/partials/certificates.ejs
+++ b/views/partials/certificates.ejs
@@ -1,33 +1,38 @@
 <section id="certificates">
-  <h3>Certificates<span class="primary">.</span></h3>
-  <p>
-    I am a self-taught web developer, who acquired most her knowledge by taking courses on LinkedIn Learning, watching YouTube videos, reading books and newsletters, listening to podcasts and of course by building apps.
-  </p>
+  <div class="section--padding">
+    <h3>Certificates<span class="primary">.</span></h3>
+    <p>
+      I am a self-taught web developer, who acquired most her knowledge by taking courses on LinkedIn Learning, watching YouTube videos, reading books and newsletters, listening to podcasts and of course by building apps.
+    </p>
 
-  <p>Below you can see a list of the certificates I earned</p>
+    <p>Below you can see a list of the certificates I earned</p>
 
-  <div class="certificates__grid">
-    <% for(let language in data.certificates) { %>
-      <div>
-        <button 
-          class="certificates__toggle" 
-          aria-expanded="false" 
-          aria-controls=<%= language.replace(/[\s&\.]/mg, '') %>
-          id="<%= language.replace(/[\s&\.]/mg, '') %>-button"
-        >+</button>
-        <span class="certificates__lang"><%= language %></span>
-        
-        <ul 
-          class="certificates__list" 
-          id="<%= language.replace(/[\s&\.]/mg, '') %>" 
-          role="region" 
-          aria-labelledby="<%= language.replace(/[\s&\.]/mg, '') %>-button"
-        >
-          <% data.certificates[language].forEach(certificate => { %>
-            <li><%= certificate[1]  %> <span class="certificates__provider"><%= certificate[0]  %></span></li>
-          <% }); %><%# end forEach %> 
-        </ul>
-      </div>
-    <% } %><%# end for in %>
+    <div class="certificates__grid">
+      <% for(let language in data.certificates) { %>
+        <div>
+          <button 
+            class="certificates__toggle" 
+            aria-expanded="false" 
+            aria-controls=<%= language.replace(/[\s&\.]/mg, '') %>
+            id="<%= language.replace(/[\s&\.]/mg, '') %>-button"
+          >+</button>
+          <span class="certificates__lang"><%= language %></span>
+          
+          <ul 
+            class="certificates__list" 
+            id="<%= language.replace(/[\s&\.]/mg, '') %>" 
+            role="region" 
+            aria-labelledby="<%= language.replace(/[\s&\.]/mg, '') %>-button"
+          >
+            <% data.certificates[language].forEach(certificate => { %>
+              <li><%= certificate[1]  %> <span class="certificates__provider"><%= certificate[0]  %></span></li>
+            <% }); %><%# end forEach %> 
+          </ul>
+        </div>
+      <% } %><%# end for in %>
+    </div>
   </div>
+
+  <svg class="divider light bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 55.5"><polygon class="cls-1" points="0 49 0 0 245 29 381 0 500 24 500 49 0 49"/></svg>
+
 </section>
