--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,15 +1,18 @@
 <section id="contact">
-  <h3>Contact<span class="primary">.</span></h3>
-  <p>Thank you for checking out my portfolio! I am currently looking for an <span class="diff bold">entry-level web developer position</span>.</p>
-  <p>
-    If you have a job opening and you think I could be suitable, please call me on <span class="diff bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
-  </p>
-  <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
-  <a href="#contact" id="contact-button">
-    <svg><use href="#envelope"></use></svg>
-  </a>
+  <svg class="divider light top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
+  <div class="section--padding">
+    <h3>Contact<span class="primary">.</span></h3>
+    <p>Thank you for checking out my portfolio! I am currently looking for an <span class="diff bold">entry-level web developer position</span>.</p>
+    <p>
+      If you have a job opening and you think I could be suitable, please call me on <span class="diff bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
+    </p>
+    <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
+    <a href="#contact" id="contact-button">
+      <svg><use href="#envelope"></use></svg>
+    </a>
 
-  <br />
-  <small>This button will open your mail software.</small>
+    <br />
+    <small>This button will open your mail software.</small>
+  </div>
 </section>
 </main>
