--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -35,6 +35,45 @@
           </div>
         </div>
       <% }); %>
+
+      <div class="grid__card grid__card--last">
+        <div class="grid__copy">
+          <h4 class="grid__title">Static pages</h4>
+          <p>
+            These pages only use HTML, CSS and JavaScript (and a bit of PHP to send emails with the contact forms). 
+          </p>
+        </div>
+
+        <div class="static">
+          <div class="static__wedding">
+            <div class="background"></div>
+            <div class="static__copy">
+              <p>Wedding Photographer Portfolio</p> 
+              <a href="">View Live</a>
+              <a href="">Source Code</a>
+            </div>
+          </div>
+  
+          <div class="static__travel">
+            <div class="background"></div>
+            <div class="static__copy">
+              <p>Travel Videographer Portfolio</p> 
+              <a href="">View Live</a>
+              <a href="">Source Code</a>
+            </div>
+          </div>
+  
+          <div class="static__charity">
+            <div class="background"></div>
+            <div class="static__copy">
+              <p>Bilingual Charity Website</p> 
+              <a href="">View Live</a>
+              <a href="">Source Code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 <% } %>
