adding copy to page and correcting href attributes of links

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -3,7 +3,7 @@
     <h3>About<span class="primary">.</span></h3>
     
     <p>
-      Hello! I'm Patricia and I love creating different projects with code. When I am not working on a website or a web app, I like to create <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">YouTube tutorials</a> for others, who learn frontend web development. 
+      Hello! I'm Patricia and I love creating fun projects with code. When I am not working on a website or learning new skills, I like to create <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">YouTube tutorials</a> for fellow coders. My current videos mainly focus on creating interactive animations and interesting effects with the help of CSS and JavaScript.
     </p>
 
     <p>Some of my videos are:</p>
@@ -29,7 +29,7 @@
       <% }); %>
     </div>
     <p class="youtube-link">
-      View more on YouTube: <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">Visit my channel</a>.
+      You can view more on YouTube: <a href="https://www.youtube.com/channel/UCnTVj2blZd_9_xpbo2t7ARw" target="_blank">Visit my channel</a>.
     </p>
     
     
