--- a/views/partials/certificates.ejs
+++ b/views/partials/certificates.ejs
@@ -5,7 +5,7 @@
       I am a self-taught web developer, who acquired most her knowledge by taking courses on LinkedIn Learning, watching YouTube videos, reading books and newsletters, listening to podcasts and of course by building apps.
     </p>
 
-    <p>Below you can see a list of the certificates I earned</p>
+    <p>Below you can see a list of the certificates I earned. Simply click on the plus button to expand the appropriate section.</p>
 
     <div class="certificates__grid">
       <% for(let language in data.certificates) { %>
