--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -2,9 +2,10 @@
   <svg class="divider light top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="500 0 500 49 255 20 119 49 0 25 0 0 500 0"/></svg>
   <div class="section--padding">
     <h3>Contact<span class="primary">.</span></h3>
-    <p>Thank you for checking out my portfolio! I am currently looking for an <span class="diff bold">entry-level web developer position</span>.</p>
+    <p>Thank you for checking out my portfolio! I am currently looking for an entry-level web developer position.</p>
     <p>
-      If you have a job opening and you think I could be suitable, please call me on <span class="diff bold">07856673788</span> or send me an email to <a href="mailto:hello@patriciamolnar.com" class="bold">hello@patriciamolnar.com</a> to discuss how I could benefit your organisation. 
+      If you have a job opening and you think I could be the right fit, please call me on
+      <a href="tel:07856673788">07856673788</a> or send me an email to <a href="mailto:hello@patriciamolnar.com">hello@patriciamolnar.com</a>. 
     </p>
     <a href="mailto:hello@patriciamolnar.com" class="button" id="contact__link">Contact</a>
     <a href="#contact" id="contact-button">
