--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -12,7 +12,7 @@
             <div>
               <h4 class="grid__title"><%= project.title %></h4>
               <p>
-                <span class="diff">Stack used:</span> 
+                <span class="diff">Created with:</span> 
                 <%= project.stack %>
               </p>
               <p>
@@ -29,7 +29,7 @@
               </p>
             </div>
             <div>
-              <a href=<%= project.live_url %> target="_blank" class="button">View Web App</a>
+              <a href=<%= project.live_url %> target="_blank" class="button">View Live</a>
               <a href=<%= project.github_url %> target="_blank" class="button">Source Code</a>
             </div>
           </div>
@@ -38,9 +38,9 @@
 
       <div class="grid__card grid__card--last">
         <div class="grid__copy">
-          <h4 class="grid__title">Static pages</h4>
+          <h4 class="grid__title">Brochure Websites</h4>
           <p>
-            These pages only use HTML, CSS and JavaScript (and a bit of PHP to send emails with the contact forms). 
+            These pages only use HTML, CSS and JavaScript (and a bit of PHP to send emails through the contact form). 
           </p>
         </div>
 
@@ -49,8 +49,8 @@
             <div class="background"></div>
             <div class="static__copy">
               <p>Wedding Photographer Portfolio</p> 
-              <a href="">View Live</a>
-              <a href="">Source Code</a>
+              <a href="https://patriciamolnar.github.io/wedding-photographer" target="_blank">View Live</a>
+              <a href="https://github.com/patriciamolnar/wedding-photographer" target="_blank">Source Code</a>
             </div>
           </div>
   
@@ -58,8 +58,8 @@
             <div class="background"></div>
             <div class="static__copy">
               <p>Travel Videographer Portfolio</p> 
-              <a href="">View Live</a>
-              <a href="">Source Code</a>
+              <a href="https://patriciamolnar.github.io/travel-videographer" target="_blank">View Live</a>
+              <a href="https://github.com/patriciamolnar/travel-videographer" target="_blank">Source Code</a>
             </div>
           </div>
   
@@ -67,8 +67,8 @@
             <div class="background"></div>
             <div class="static__copy">
               <p>Bilingual Charity Website</p> 
-              <a href="">View Live</a>
-              <a href="">Source Code</a>
+              <a href="https://hazakiserotelefon.hu/en/" target="_blank">View Live</a>
+              <span>As this project was made for a client, the source code remains private.</span>
             </div>
           </div>
         </div>
